--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -29,11 +29,13 @@
             "console": "integratedTerminal",
             "program": "${workspaceFolder}/zenbot.js",
             "cwd": "${workspaceFolder}",
-            "args": [ "sim", "gdax.eth-btc",  
-                "--period=5m", 
+            "args": [ "sim", "binance.bnb-usdt",  
+                "--period=1m", 
+                "--rsi_periods=8",
+                "--min_periods=1",
                 "--strategy=srsi_bollinger",
                 "--order_type=maker", 
-                "--currency_capital=0.04",
+                "--currency_capital=44",
             "--srsi_k=5",
         "--srsi_d=3",
         "--keep_lookback_periods=100",
