--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -30,8 +30,9 @@
             "program": "${workspaceFolder}/zenbot.js",
             "cwd": "${workspaceFolder}",
             "args": [ "sim", "binance.bnb-usdt",  
-                "--period=1m", 
-                "--rsi_periods=8",
+                "--period=5m", 
+                "--rsi_periods=30",
+                "--srsi_periods=9",
                 "--min_periods=1",
                 "--strategy=srsi_bollinger",
                 "--order_type=maker", 
