--- a/.eslintrc
+++ b/.eslintrc
@@ -1,4 +1,5 @@
 {
+
     "env": {
         "es6": true,
         "node": true,
@@ -26,6 +27,7 @@
         ]
     },
     "parserOptions": {
+        "ecmaVersion": 2017,
         "sourceType": "module",
         "ecmaFeatures": {
             "experimentalObjectRestSpread": true
