--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -75,6 +75,24 @@
                 "--currency_capital=44",
                 "--keep_lookback_periods=100",
        ]
+        },        
+        {
+            "type": "node",
+            "request": "launch",
+            "name": "Launch Zenbot Sim ti_stoch_bollinger",
+            "console": "integratedTerminal",
+            "program": "${workspaceFolder}/zenbot.js",
+            "cwd": "${workspaceFolder}",
+            "args": [ "sim", "binance.bnb-usdt",  
+                "--period=1m", 
+                "--rsi_periods=14",
+                
+                "--min_periods=1",
+                "--strategy=ti_stoch_bollinger",
+                "--order_type=maker", 
+                "--currency_capital=44",
+                "--keep_lookback_periods=100",
+       ]
         },  
         {
             "type": "node",
